# learnopengl-qt

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  learnopengl-qt.pro  main.cpp  qrc.qrc
resources/: resources.qrc
src/: CMakeLists.txt  Config.h  main.cpp  shaders.qrc
src/1.getting_started/2.1hello_triangle/: HelloTriangle.h  hello_triangle.frag
src/1.getting_started/2.3hello_triangle_exercise1/: HelloTriangleExercise1.cpp  HelloTriangleExercise1.h
src/1.getting_started/2.4hello_triangle_exercise2/: HelloTriangleExercise2.h
src/1.getting_started/2.5hello_triangle_exercise3/: HelloTriangleExercise3.cpp
src/1.getting_started/3.2shaders_interpolation/: ShadersInterpolation.h  shaders_interpolation.frag  shaders_interpolation.vert  shaders_interpolation1.frag
src/1.getting_started/4.1textures/: Textures.h
src/1.getting_started/4.4textures_exercise2/: TexturesExercise2.h
src/1.getting_started/4.6textures_exercise4/: TexturesExercise4.cpp  TexturesExercise4.h  textures_exercise4.frag  textures_exercise4.vert
src/1.getting_started/5.1transformations/: Transformations.h  transformations.vert
src/1.getting_started/6.1coordinate_systems/: CoordinateSystems.frag  CoordinateSystems.h
src/1.getting_started/6.2coordinate_systems_depth/: CoordinateSystemsDepth.cpp  CoordinateSystemsDepth.h
src/1.getting_started/6.3coordinate_systems_exercise/: CoordinateSystemsExercise.h
src/1.getting_started/7.1camera_circle/: CameraCircle.h
src/1.getting_started/7.2camera_interact/: CameraInteract.cpp  CameraInteract.h
src/2.lighting/1.colors/: Colors.cpp  Colors.h
src/2.lighting/2.1basic_lighting_diffuse/: basic_lighting.frag
src/2.lighting/2.2basic_lighting_specular/: BasicLightingSpecular.h  basic_lighting.frag
src/utils/: CameraUtil.cpp  CameraUtil.h  Mesh.h  ModelUtil.cpp  ModelUtil.h  OpenGLUniformbufferObject.h
(+144 files in other folders)
